feat: 연락처 및 마음 전하기 섹션 디자인 통일 및 hero 섹션 개선
- 연락처 섹션을 마음 전하기 섹션과 동일한 카드 디자인으로 통일
- 부모님끼리 그룹화하여 표시 (연락처, 마음 전하기)
- 신랑 부모님/신부 부모님 → 신랑측/신부측으로 변경
- hero 섹션에 날짜와 시간 통합 및 장소 추가
- 복사 버튼 스타일 개선 (작은 아이콘 버튼)
- 축의 마음 전하기 → 마음 전하기로 제목 변경
- 공유하기 섹션 이모티콘 변경 (📤)

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <div class="heart">💕</div>
                 <h1 class="bride-name">한정화</h1>
             </div>
-            <p class="date">2026년 1월 4일</p>
-            <p class="time">오후 12시 10분</p>
+            <p class="date">2026년 1월 4일 오후 12시 10분</p>
+            <p class="location">마곡 보타닉파크웨딩</p>
         </div>
         <div class="scroll-indicator">
             <span>↓</span>
@@ -273,89 +273,181 @@
             </div>
             <h2 class="section-title">연락처</h2>
             <div class="contact-grid">
-                <!-- 왼쪽 컬럼: 신랑 -->
+                <!-- 신랑측 -->
                 <div class="contact-column">
-                    <div class="contact-item">
-                        <div class="contact-icon">👫</div>
-                        <div class="contact-content">
-                            <h3>신랑 부모님</h3>
-                            <div class="parent-names">
-                                <div class="contact-name-row">
-                                    <p class="contact-name">양태융</p>
-                                    <div class="parent-links">
-                                        <a href="tel:01052047528" class="kakao-link small" onclick="copyPhoneNumber('010-5204-7528', event);" title="아버지 전화번호 복사">
-                                            <span class="kakao-icon">📞</span>
-                                        </a>
-                                        <a href="#" class="kakao-link small" onclick="copyAccountNumber('신랑 부모님 (아버지)', '계좌번호를 입력해주세요', event);" title="아버지 계좌번호 복사">
-                                            <span class="kakao-icon">💳</span>
+                    <div class="contact-card">
+                        <div class="contact-header">
+                            <div class="contact-icon">👫</div>
+                            <h3>신랑측</h3>
+                        </div>
+                        <div class="contact-list">
+                            <div class="contact-parent-group">
+                                <div class="contact-item">
+                                    <div class="contact-name">양태융</div>
+                                    <div class="contact-info-row">
+                                        <div class="contact-info">
+                                            <span class="contact-phone">010-5204-7528</span>
+                                        </div>
+                                        <a href="tel:01052047528" class="contact-copy-btn" onclick="copyPhoneNumber('010-5204-7528', event);" title="전화번호 복사">
+                                            <span class="contact-copy-icon">📞</span>
                                         </a>
                                     </div>
                                 </div>
-                                <div class="contact-name-row">
-                                    <p class="contact-name">조미경</p>
-                                    <div class="parent-links">
-                                        <a href="tel:01090328528" class="kakao-link small" onclick="copyPhoneNumber('010-9032-8528', event);" title="어머니 전화번호 복사">
-                                            <span class="kakao-icon">📞</span>
-                                        </a>
-                                        <a href="#" class="kakao-link small" onclick="copyAccountNumber('신랑 부모님 (어머니)', '계좌번호를 입력해주세요', event);" title="어머니 계좌번호 복사">
-                                            <span class="kakao-icon">💳</span>
+                                <div class="contact-item">
+                                    <div class="contact-name">조미경</div>
+                                    <div class="contact-info-row">
+                                        <div class="contact-info">
+                                            <span class="contact-phone">010-9032-8528</span>
+                                        </div>
+                                        <a href="tel:01090328528" class="contact-copy-btn" onclick="copyPhoneNumber('010-9032-8528', event);" title="전화번호 복사">
+                                            <span class="contact-copy-icon">📞</span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">🤵</div>
-                        <div class="contact-content">
-                            <h3>신랑</h3>
-                            <p class="contact-name">양진보</p>
-                            <a href="tel:01094778528" class="kakao-link" onclick="copyPhoneNumber('010-9477-8528', event);" title="전화번호 복사">
-                                <span class="kakao-icon">📞</span>
-                            </a>
+                            <div class="contact-item">
+                                <div class="contact-name">양진보</div>
+                                <div class="contact-info-row">
+                                    <div class="contact-info">
+                                        <span class="contact-phone">010-9477-8528</span>
+                                    </div>
+                                    <a href="tel:01094778528" class="contact-copy-btn" onclick="copyPhoneNumber('010-9477-8528', event);" title="전화번호 복사">
+                                        <span class="contact-copy-icon">📞</span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!-- 오른쪽 컬럼: 신부 -->
+                <!-- 신부측 -->
                 <div class="contact-column">
-                    <div class="contact-item">
-                        <div class="contact-icon">👫</div>
-                        <div class="contact-content">
-                            <h3>신부 부모님</h3>
-                            <div class="parent-names">
-                                <div class="contact-name-row">
-                                    <p class="contact-name">한상문</p>
-                                    <div class="parent-links">
-                                        <a href="tel:01038250179" class="kakao-link small" onclick="copyPhoneNumber('010-3825-0179', event);" title="아버지 전화번호 복사">
-                                            <span class="kakao-icon">📞</span>
-                                        </a>
-                                        <a href="#" class="kakao-link small" onclick="copyAccountNumber('신부 부모님 (아버지)', '우리은행 318-005252-12-101', event);" title="아버지 계좌번호 복사">
-                                            <span class="kakao-icon">💳</span>
+                    <div class="contact-card">
+                        <div class="contact-header">
+                            <div class="contact-icon">👫</div>
+                            <h3>신부측</h3>
+                        </div>
+                        <div class="contact-list">
+                            <div class="contact-parent-group">
+                                <div class="contact-item">
+                                    <div class="contact-name">한상문</div>
+                                    <div class="contact-info-row">
+                                        <div class="contact-info">
+                                            <span class="contact-phone">010-3825-0179</span>
+                                        </div>
+                                        <a href="tel:01038250179" class="contact-copy-btn" onclick="copyPhoneNumber('010-3825-0179', event);" title="전화번호 복사">
+                                            <span class="contact-copy-icon">📞</span>
                                         </a>
                                     </div>
                                 </div>
-                                <div class="contact-name-row">
-                                    <p class="contact-name">이유영</p>
-                                    <div class="parent-links">
-                                        <a href="tel:01090716272" class="kakao-link small" onclick="copyPhoneNumber('010-9071-6272', event);" title="어머니 전화번호 복사">
-                                            <span class="kakao-icon">📞</span>
+                                <div class="contact-item">
+                                    <div class="contact-name">이유영</div>
+                                    <div class="contact-info-row">
+                                        <div class="contact-info">
+                                            <span class="contact-phone">010-9071-6272</span>
+                                        </div>
+                                        <a href="tel:01090716272" class="contact-copy-btn" onclick="copyPhoneNumber('010-9071-6272', event);" title="전화번호 복사">
+                                            <span class="contact-copy-icon">📞</span>
                                         </a>
-                                        <a href="#" class="kakao-link small" onclick="copyAccountNumber('신부 부모님 (어머니)', '우리은행 1002-040-675106', event);" title="어머니 계좌번호 복사">
-                                            <span class="kakao-icon">💳</span>
-                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="contact-item">
+                                <div class="contact-name">한정화</div>
+                                <div class="contact-info-row">
+                                    <div class="contact-info">
+                                        <span class="contact-phone">010-4008-6272</span>
+                                    </div>
+                                    <a href="tel:01040086272" class="contact-copy-btn" onclick="copyPhoneNumber('010-4008-6272', event);" title="전화번호 복사">
+                                        <span class="contact-copy-icon">📞</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 축의 마음 전하기 섹션 -->
+    <section class="account-section">
+        <div class="container">
+            <div class="section-divider">
+                <span class="divider-icon">💝</span>
+            </div>
+            <h2 class="section-title">마음 전하기</h2>
+            <div class="account-grid">
+                <!-- 신랑 부모님 -->
+                <div class="account-column">
+                    <div class="account-card">
+                        <div class="account-header">
+                            <div class="account-icon">👫</div>
+                            <h3>신랑측</h3>
+                        </div>
+                        <div class="account-list">
+                            <div class="account-parent-group">
+                                <div class="account-item">
+                                    <div class="account-name">양태융</div>
+                                    <div class="account-info-row">
+                                        <div class="account-info">
+                                            <span class="account-bank">국민은행</span>
+                                            <span class="account-number">48132501040096</span>
+                                        </div>
+                                        <button class="account-copy-btn" onclick="copyAccountNumber('신랑 부모님 (아버지)', '국민은행 48132501040096', event);" title="계좌번호 복사">
+                                            <span class="account-copy-icon">📋</span>
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="account-item">
+                                    <div class="account-name">조미경</div>
+                                    <div class="account-info-row">
+                                        <div class="account-info">
+                                            <span class="account-bank">국민은행</span>
+                                            <span class="account-number">05780104011832</span>
+                                        </div>
+                                        <button class="account-copy-btn" onclick="copyAccountNumber('신랑 부모님 (어머니)', '국민은행 05780104011832', event);" title="계좌번호 복사">
+                                            <span class="account-copy-icon">📋</span>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">👰‍♀️</div>
-                        <div class="contact-content">
-                            <h3>신부</h3>
-                            <p class="contact-name">한정화</p>
-                            <a href="tel:01040086272" class="kakao-link" onclick="copyPhoneNumber('010-4008-6272', event);" title="전화번호 복사">
-                                <span class="kakao-icon">📞</span>
-                            </a>
+                </div>
+                <!-- 신부 부모님 -->
+                <div class="account-column">
+                    <div class="account-card">
+                        <div class="account-header">
+                            <div class="account-icon">👫</div>
+                            <h3>신부측</h3>
+                        </div>
+                        <div class="account-list">
+                            <div class="account-parent-group">
+                                <div class="account-item">
+                                    <div class="account-name">한상문</div>
+                                    <div class="account-info-row">
+                                        <div class="account-info">
+                                            <span class="account-bank">우리은행</span>
+                                            <span class="account-number">318-005252-12-101</span>
+                                        </div>
+                                        <button class="account-copy-btn" onclick="copyAccountNumber('신부 부모님 (아버지)', '우리은행 318-005252-12-101', event);" title="계좌번호 복사">
+                                            <span class="account-copy-icon">📋</span>
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="account-item">
+                                    <div class="account-name">이유영</div>
+                                    <div class="account-info-row">
+                                        <div class="account-info">
+                                            <span class="account-bank">우리은행</span>
+                                            <span class="account-number">1002-040-675106</span>
+                                        </div>
+                                        <button class="account-copy-btn" onclick="copyAccountNumber('신부 부모님 (어머니)', '우리은행 1002-040-675106', event);" title="계좌번호 복사">
+                                            <span class="account-copy-icon">📋</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -367,7 +459,7 @@
     <section class="share-section">
         <div class="container">
             <div class="section-divider">
-                <span class="divider-icon">💝</span>
+                <span class="divider-icon">📤</span>
             </div>
             <h2 class="section-title">청첩장 공유하기</h2>
             <div class="share-buttons">
