feat: 섹션별 이모티콘 변경
- 연락처 섹션: 히비스커스(🌺) 이모티콘 사용
- 마음 전하기 섹션: 꽃다발(💐) 이모티콘 사용

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div class="contact-column">
                     <div class="contact-card">
                         <div class="contact-header">
-                            <div class="contact-icon">👫</div>
+                            <div class="contact-icon">🌺</div>
                             <h3>신랑측</h3>
                         </div>
                         <div class="contact-list">
@@ -323,7 +323,7 @@
                 <div class="contact-column">
                     <div class="contact-card">
                         <div class="contact-header">
-                            <div class="contact-icon">👫</div>
+                            <div class="contact-icon">🌺</div>
                             <h3>신부측</h3>
                         </div>
                         <div class="contact-list">
@@ -381,7 +381,7 @@
                 <div class="account-column">
                     <div class="account-card">
                         <div class="account-header">
-                            <div class="account-icon">👫</div>
+                            <div class="account-icon">💐</div>
                             <h3>신랑측</h3>
                         </div>
                         <div class="account-list">
@@ -418,7 +418,7 @@
                 <div class="account-column">
                     <div class="account-card">
                         <div class="account-header">
-                            <div class="account-icon">👫</div>
+                            <div class="account-icon">💐</div>
                             <h3>신부측</h3>
                         </div>
                         <div class="account-list">
