feat: 계좌번호 및 전화번호 마스킹 기능 추가
- 계좌번호 기본 마스킹 강화 (앞뒤 2-4자리만 표시)
- 계좌번호 복사 버튼에 '복사하기' 텍스트 추가
- 전화번호 마스킹 기능 추가 (010-****-7528 형식)
- 전화번호 연락 버튼에 '연락하기' 텍스트 추가
- 복사/연락 버튼 클릭 시 전체 번호 2초간 표시 후 다시 마스킹
- 계좌번호와 전화번호 버튼 스타일 통일

--- a/index.html
+++ b/index.html
@@ -286,10 +286,11 @@
                                     <div class="contact-name">양태융</div>
                                     <div class="contact-info-row">
                                         <div class="contact-info">
-                                            <span class="contact-phone">010-5204-7528</span>
+                                            <span class="contact-phone" data-full="010-5204-7528">010-****-7528</span>
                                         </div>
-                                        <a href="tel:01052047528" class="contact-copy-btn" onclick="copyPhoneNumber('010-5204-7528', event);" title="전화번호 복사">
+                                        <a href="tel:01052047528" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-5204-7528', '01052047528', event);" title="전화번호 복사">
                                             <span class="contact-copy-icon">📞</span>
+                                            <span class="contact-copy-text">연락하기</span>
                                         </a>
                                     </div>
                                 </div>
@@ -297,10 +298,11 @@
                                     <div class="contact-name">조미경</div>
                                     <div class="contact-info-row">
                                         <div class="contact-info">
-                                            <span class="contact-phone">010-9032-8528</span>
+                                            <span class="contact-phone" data-full="010-9032-8528">010-****-8528</span>
                                         </div>
-                                        <a href="tel:01090328528" class="contact-copy-btn" onclick="copyPhoneNumber('010-9032-8528', event);" title="전화번호 복사">
+                                        <a href="tel:01090328528" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-9032-8528', '01090328528', event);" title="전화번호 복사">
                                             <span class="contact-copy-icon">📞</span>
+                                            <span class="contact-copy-text">연락하기</span>
                                         </a>
                                     </div>
                                 </div>
@@ -309,10 +311,11 @@
                                 <div class="contact-name">양진보</div>
                                 <div class="contact-info-row">
                                     <div class="contact-info">
-                                        <span class="contact-phone">010-9477-8528</span>
+                                        <span class="contact-phone" data-full="010-9477-8528">010-****-8528</span>
                                     </div>
-                                    <a href="tel:01094778528" class="contact-copy-btn" onclick="copyPhoneNumber('010-9477-8528', event);" title="전화번호 복사">
+                                    <a href="tel:01094778528" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-9477-8528', '01094778528', event);" title="전화번호 복사">
                                         <span class="contact-copy-icon">📞</span>
+                                        <span class="contact-copy-text">연락하기</span>
                                     </a>
                                 </div>
                             </div>
@@ -332,10 +335,11 @@
                                     <div class="contact-name">한상문</div>
                                     <div class="contact-info-row">
                                         <div class="contact-info">
-                                            <span class="contact-phone">010-3825-0179</span>
+                                            <span class="contact-phone" data-full="010-3825-0179">010-****-0179</span>
                                         </div>
-                                        <a href="tel:01038250179" class="contact-copy-btn" onclick="copyPhoneNumber('010-3825-0179', event);" title="전화번호 복사">
+                                        <a href="tel:01038250179" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-3825-0179', '01038250179', event);" title="전화번호 복사">
                                             <span class="contact-copy-icon">📞</span>
+                                            <span class="contact-copy-text">연락하기</span>
                                         </a>
                                     </div>
                                 </div>
@@ -343,10 +347,11 @@
                                     <div class="contact-name">이유영</div>
                                     <div class="contact-info-row">
                                         <div class="contact-info">
-                                            <span class="contact-phone">010-9071-6272</span>
+                                            <span class="contact-phone" data-full="010-9071-6272">010-****-6272</span>
                                         </div>
-                                        <a href="tel:01090716272" class="contact-copy-btn" onclick="copyPhoneNumber('010-9071-6272', event);" title="전화번호 복사">
+                                        <a href="tel:01090716272" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-9071-6272', '01090716272', event);" title="전화번호 복사">
                                             <span class="contact-copy-icon">📞</span>
+                                            <span class="contact-copy-text">연락하기</span>
                                         </a>
                                     </div>
                                 </div>
@@ -355,10 +360,11 @@
                                 <div class="contact-name">한정화</div>
                                 <div class="contact-info-row">
                                     <div class="contact-info">
-                                        <span class="contact-phone">010-4608-6272</span>
+                                        <span class="contact-phone" data-full="010-4608-6272">010-****-6272</span>
                                     </div>
-                                    <a href="tel:01046086272" class="contact-copy-btn" onclick="copyPhoneNumber('010-4608-6272', event);" title="전화번호 복사">
+                                    <a href="tel:01046086272" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-4608-6272', '01046086272', event);" title="전화번호 복사">
                                         <span class="contact-copy-icon">📞</span>
+                                        <span class="contact-copy-text">연락하기</span>
                                     </a>
                                 </div>
                             </div>
@@ -391,10 +397,11 @@
                                     <div class="account-info-row">
                                         <div class="account-info">
                                             <span class="account-bank">국민은행</span>
-                                            <span class="account-number">48132501040096</span>
+                                            <span class="account-number" data-full="48132501040096">48********96</span>
                                         </div>
-                                        <button class="account-copy-btn" onclick="copyAccountNumber('신랑 부모님 (아버지)', '국민은행 48132501040096', event);" title="계좌번호 복사">
+                                        <button class="account-copy-btn" onclick="copyAccountNumberWithReveal('신랑 부모님 (아버지)', '국민은행 48132501040096', '48132501040096', event);" title="계좌번호 복사">
                                             <span class="account-copy-icon">📋</span>
+                                            <span class="account-copy-text">복사하기</span>
                                         </button>
                                     </div>
                                 </div>
@@ -403,10 +410,11 @@
                                     <div class="account-info-row">
                                         <div class="account-info">
                                             <span class="account-bank">국민은행</span>
-                                            <span class="account-number">05780104011832</span>
+                                            <span class="account-number" data-full="05780104011832">05********32</span>
                                         </div>
-                                        <button class="account-copy-btn" onclick="copyAccountNumber('신랑 부모님 (어머니)', '국민은행 05780104011832', event);" title="계좌번호 복사">
+                                        <button class="account-copy-btn" onclick="copyAccountNumberWithReveal('신랑 부모님 (어머니)', '국민은행 05780104011832', '05780104011832', event);" title="계좌번호 복사">
                                             <span class="account-copy-icon">📋</span>
+                                            <span class="account-copy-text">복사하기</span>
                                         </button>
                                     </div>
                                 </div>
@@ -428,10 +436,11 @@
                                     <div class="account-info-row">
                                         <div class="account-info">
                                             <span class="account-bank">우리은행</span>
-                                            <span class="account-number">318-005252-12-101</span>
+                                            <span class="account-number" data-full="318-005252-12-101">318-****-*-*01</span>
                                         </div>
-                                        <button class="account-copy-btn" onclick="copyAccountNumber('신부 부모님 (아버지)', '우리은행 318-005252-12-101', event);" title="계좌번호 복사">
+                                        <button class="account-copy-btn" onclick="copyAccountNumberWithReveal('신부 부모님 (아버지)', '우리은행 318-005252-12-101', '318-005252-12-101', event);" title="계좌번호 복사">
                                             <span class="account-copy-icon">📋</span>
+                                            <span class="account-copy-text">복사하기</span>
                                         </button>
                                     </div>
                                 </div>
@@ -440,10 +449,11 @@
                                     <div class="account-info-row">
                                         <div class="account-info">
                                             <span class="account-bank">우리은행</span>
-                                            <span class="account-number">1002-040-675106</span>
+                                            <span class="account-number" data-full="1002-040-675106">1002-***-***06</span>
                                         </div>
-                                        <button class="account-copy-btn" onclick="copyAccountNumber('신부 부모님 (어머니)', '우리은행 1002-040-675106', event);" title="계좌번호 복사">
+                                        <button class="account-copy-btn" onclick="copyAccountNumberWithReveal('신부 부모님 (어머니)', '우리은행 1002-040-675106', '1002-040-675106', event);" title="계좌번호 복사">
                                             <span class="account-copy-icon">📋</span>
+                                            <span class="account-copy-text">복사하기</span>
                                         </button>
                                     </div>
                                 </div>
