--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="양진보 & 한정화 결혼합니다">
     <meta property="og:description" content="2026년 1월 4일 일요일 오후 12시 10분 마곡보타닉파크웨딩">
-    <meta property="og:image" content="https://elliehan93.github.io/JBJH-wedding-invitation/photos/1.jpg">
+    <meta property="og:image" content="https://elliehan93.github.io/JBJH-wedding-invitation/photos/hero.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/jpeg">
     <meta property="og:url" content="https://elliehan93.github.io/JBJH-wedding-invitation/">
     <meta property="og:site_name" content="양진보 & 한정화 결혼합니다">
     
@@ -19,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="양진보 & 한정화 결혼합니다">
     <meta name="twitter:description" content="2026년 1월 4일 일요일 오후 12시 10분 마곡보타닉파크웨딩">
-    <meta name="twitter:image" content="https://elliehan93.github.io/JBJH-wedding-invitation/photos/1.jpg">
+    <meta name="twitter:image" content="https://elliehan93.github.io/JBJH-wedding-invitation/photos/hero.jpg">
     
     <!-- 파비콘 -->
     <link rel="icon" type="image/jpeg" href="photos/hero.jpg">
