remove: 전화번호 마스킹 제거
- 모든 전화번호의 * 마스킹 제거
- 전체 전화번호 직접 표시

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                     <div class="contact-name">양태융</div>
                                     <div class="contact-info-row">
                                         <div class="contact-info">
-                                            <span class="contact-phone" data-full="010-5204-7528">010-****-7528</span>
+                                            <span class="contact-phone">010-5204-7528</span>
                                         </div>
                                         <a href="tel:01052047528" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-5204-7528', '01052047528', event);" title="전화번호 복사">
                                             <span class="contact-copy-icon">📞</span>
@@ -301,7 +301,7 @@
                                     <div class="contact-name">조미경</div>
                                     <div class="contact-info-row">
                                         <div class="contact-info">
-                                            <span class="contact-phone" data-full="010-9032-8528">010-****-8528</span>
+                                            <span class="contact-phone">010-9032-8528</span>
                                         </div>
                                         <a href="tel:01090328528" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-9032-8528', '01090328528', event);" title="전화번호 복사">
                                             <span class="contact-copy-icon">📞</span>
@@ -314,7 +314,7 @@
                                 <div class="contact-name">양진보</div>
                                 <div class="contact-info-row">
                                     <div class="contact-info">
-                                        <span class="contact-phone" data-full="010-9477-8528">010-****-8528</span>
+                                            <span class="contact-phone">010-9477-8528</span>
                                     </div>
                                     <a href="tel:01094778528" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-9477-8528', '01094778528', event);" title="전화번호 복사">
                                         <span class="contact-copy-icon">📞</span>
@@ -338,7 +338,7 @@
                                     <div class="contact-name">한상문</div>
                                     <div class="contact-info-row">
                                         <div class="contact-info">
-                                            <span class="contact-phone" data-full="010-3825-0179">010-****-0179</span>
+                                            <span class="contact-phone">010-3825-0179</span>
                                         </div>
                                         <a href="tel:01038250179" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-3825-0179', '01038250179', event);" title="전화번호 복사">
                                             <span class="contact-copy-icon">📞</span>
@@ -350,7 +350,7 @@
                                     <div class="contact-name">이유영</div>
                                     <div class="contact-info-row">
                                         <div class="contact-info">
-                                            <span class="contact-phone" data-full="010-9071-6272">010-****-6272</span>
+                                            <span class="contact-phone">010-9071-6272</span>
                                         </div>
                                         <a href="tel:01090716272" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-9071-6272', '01090716272', event);" title="전화번호 복사">
                                             <span class="contact-copy-icon">📞</span>
@@ -363,7 +363,7 @@
                                 <div class="contact-name">한정화</div>
                                 <div class="contact-info-row">
                                     <div class="contact-info">
-                                        <span class="contact-phone" data-full="010-4608-6272">010-****-6272</span>
+                                            <span class="contact-phone">010-4608-6272</span>
                                     </div>
                                     <a href="tel:01046086272" class="contact-copy-btn" onclick="copyPhoneNumberWithReveal('010-4608-6272', '01046086272', event);" title="전화번호 복사">
                                         <span class="contact-copy-icon">📞</span>
